<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">欢迎使用 ShiftClock！</string>
    <string name="app_name">ShiftClock</string>
    <string name="app_description">基于轮班表的闹钟</string>
    <string name="label_alarmTime">预计闹铃时间：</string>
    <string name="label_disableAlarm">停止本次上班闹铃</string>
    <string name="label_setDuty">设置班种</string>
    <string name="label_setWatch">值班调整</string>
    <string name="label_about">关于</string>
    <string name="label_addWatch">加班</string>
    <string name="label_cutWatch">减班</string>
    <string name="label_duty_modify">修改</string>
    <string name="label_ok">确定</string>
    <string name="label_cancel">取消</string>
    <string name="label_dutyName">班种名</string>
    <string name="label_dutyStartTime">开始时间</string>
    <string name="label_dutyEndTime">结束时间</string>
    <string name="label_titleEditDuty">编辑班种</string>
    <string name="hint_dutyName">请输入班种名字</string>
    <string name="label_dutyAlarmBefore">提前闹铃</string>
    <string name="label_dutyDefaultAlarm">使用默认的提前闹铃设置</string>
    <string name="label_adjustHoliday">节日调整</string>
    <string name="label_regularDuty">固定值班</string>
    <string name="label_setConfig">设置</string>
    <string name="label_setJob">切换工作岗位</string>
    <string name="label_defaultAlarmBefore">默认提前闹铃时间</string>
    <string name="label_config">闹铃设置</string>
    <string name="label_job">工作岗位</string>
    <string name="label_defaultAlarmInterval">默认闹铃间隔</string>
    <string name="label_watchDate">值班日期</string>
    <string name="label_watchDuty">休息或班种</string>
    <string name="label_watchBegin">值班开始时间</string>
    <string name="label_watchEnd">值班结束时间</string>
    <string name="label_titleEditWatch">编辑值班</string>
    <string name="label_watchBeginToEnd">至</string>
    <string name="label_labelWatchDate">日期</string>
    <string name="label_labelWatchDuty">班种</string>
    <string name="label_labelWatchBefore">上班调整</string>
    <string name="label_labelWatchAfter">下班调整</string>
    <string name="label_nextWatch">下次值班：</string>
    <string name="label_buttonPauseAlarm">推迟闹铃</string>
    <string name="label_dutyTime">班种设定：</string>
    <string name="label_watchRealBegin">实际上班：</string>
    <string name="label_watchRealEnd">实际下班：</string>
    <string name="label_watchHistory">查看值班历史</string>
    <string name="label_currentWatch">当前值班：</string>
    <string name="label_delete">删除</string>
    <string name="label_setFutureWatchHint">次日值班设置提醒时间</string>

</resources>