<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

    <TextView
        android:id="@+id/text_alarmTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_alarmTime" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_disable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_disableAlarm" />

        <Button
            android:id="@+id/button_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_setConfig" />

        <Button
            android:id="@+id/button_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_about" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_setDuty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_setDuty" />

        <Button
            android:id="@+id/button_adjustDuty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_adjustDuty" />

        <Button
            android:id="@+id/button_regularDuty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_regularDuty" />

        <Button
            android:id="@+id/button_adjustHoliday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_adjustHoliday" />
    </LinearLayout>

</LinearLayout>